fixed spacing confilcts footer

--- a/footer/_footer.scss
+++ b/footer/_footer.scss
@@ -1,12 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;300&display=swap");
-body {
+footer {
   background-color: #282828;
   width: 100%;
   height: 70vh;
   .img-container {
     display: flex;
     justify-content: center;
-    margin-top: 20vh;
+    img {
+      margin: 3vh;
+    }
   }
   .links {
     ul {
